082 ==> 405625 - digiKam 6.0.0 faces engine fails to compile on PowerPC with AltiVec enabled.
083 ==> 372340 - Tagged face areas on portait (vertical) oriented images are mispositioned.
084 ==> 405743 - Customise Tool tab in editor.
085 ==> 376014 - Moving grouped photos from one folder to another breaks the group.
086 ==> 377782 - Group is lost when moved to another album.
087 ==> 385147 - Moving grouped images into another album removes groups.
088 ==> 342017 - Reverse Geocoding doesn't work.
089 ==> 405174 - Right-click advice menu. Open with another program.
090 ==> 399285 - Would it be possible to drop kio for a better 'open with' functionality across all platforms?
091 ==> 383079 - Open the photo in GIMP under windows.
092 ==> 374356 - "Show item in file explorer" as well as "open with".
093 ==> 208201 - Icons appears and disappears.
094 ==> 202955 - thumbnails in album view are flickering with high frequency.
095 ==> 208201 - Icons appears and disappears.
096 ==> 396933 - Tooltips of thumbnails and albums not readable in light designs.
097 ==> 393777 - Item Tool Tips are unreadable in Windows 10 (white on yellow).
098 ==> 240237 - Not possible to rotate the image.
099 ==> 366446 - Creating new albums fails due to invalid path name.
100 ==> 369235 - Menu bar is not translated.
101 ==> 403132 - Lazy Update not working (or: Stop when I say so).
102 ==> 404797 - digikam-6.0.0-x86-64.appimage: stack trace shortly after startup.
103 ==> 405789 - Sidebar widths revert to their defaults after switching back from full-screen view.
104 ==> 405813 - Tab-View do not show Rating information.
105 ==> 404138 - can't connect to my account.
106 ==> 403819 - Export to Google Photos not working (bad request).
107 ==> 382367 - Unreadable light on light tooltip.
108 ==> 405825 - Feature request: "Video date" in XMP Metadata Editor.
109 ==> 405799 - Not possible to add collection.
110 ==> 389549 - "Clear all faces on this image" Does Not Remove All People Tags.
111 ==> 