@@ -111,18 +111,9 @@ QString DMetadata::getItemUniqueId() const
     // The Exif ImageUniqueID is 128bit, or 32 hex digits.
     // If the first 20 are zero, it's probably a counter,
     // the left 12 are sufficient for more then 10^14 clicks.
-    if (!exifUid.isEmpty() && !exifUid.startsWith(QLatin1String("00000000000000000000")))
+    if (!exifUid.isEmpty() && !exifUid.startsWith(QLatin1String("00000000000000000000")) &&
+        !getExifTagString("Exif.Image.Make").contains(QLatin1String("SAMSUNG"), Qt::CaseInsensitive))
     {
-        if (getExifTagString("Exif.Image.Make").contains(QLatin1String("SAMSUNG"), Qt::CaseInsensitive))
-        {
-            // Generate for Samsung a new random 32 hex digits unique ID.
-            QString imageUniqueID(QUuid::createUuid().toString());
-            imageUniqueID.remove(QLatin1Char('-'));
-            imageUniqueID.remove(0, 1).chop(1);
-
-            return imageUniqueID;
-        }
-
         return exifUid;
     }
 
